# transformer-recsys

./: Makefile  README.md  model_config.yaml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: Pytorch2_Transformer_Text_Generation.ipynb  bert_ebeds.ipynb  data.ipynb  dataset.ipynb  decoder.ipynb  embedding_model_v0.ipynb  model.ipynb  test.ipynb  train_transformer_on_ids.ipynb  transformer.ipynb
recsys/: __init__.py  config.py  dataset.py  features.py  plots.py
recsys/modeling/: predict.py  train.py
recsys/models/: cola.py  cola_dataset.py  transformer.py  transformer_dataset.py
