[tool.poetry]
name = "recsys"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "1.26.4"
torch = "2.2.0"
torchtext = "0.17.0"
scikit-learn = "^1.6.0"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"
loguru = "^0.7.3"
transformers = "^4.47.0"
torchvision = "0.17.0"
pytorch-lightning = "^2.4.0"
plotly = "^5.24.1"
matplotlib = "^3.10.0"
nbformat = "^5.10.4"
ipywidgets = "^8.1.5"
iprogress = "^0.4"
cmake = "^3.31.2"
typer = "^0.15.1"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
isort = "^5.13.2"
pylint = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
